bench/tests/query_results/snapshots/r#mod__query_results__bsbm__Business Intelligence Q5.snap
---
source: bench/tests/query_results/bsbm.rs
expression: "run_select_query(&store, include_str!(\"./queries/bi-q5.sparql\")).await"
---
{
  "head": {
    "vars": [
      "country",
      "product",
      "nrOfReviews",
      "avgPrice"
    ]
  },
  "results": {
    "bindings": [
      {
        "avgPrice": {
          "datatype": "http://www.w3.org/2001/XMLSchema#float",
          "type": "literal",
          "value": "5117.6626"
        },
        "country": {
          "type": "uri",
          "value": "http://downlode.org/rdf/iso-3166/countries#US"
        },
        "nrOfReviews": {
          "datatype": "http://www.w3.org/2001/XMLSchema#integer",
          "type": "literal",
          "value": "10"
        },
        "product": {
          "type": "uri",
          "value": "http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromProducer9/Product443"
        }
      },
      {
        "avgPrice": {
          "datatype": "http://www.w3.org/2001/XMLSchema#float",
          "type": "literal",
          "value": "5658.503"
        },
        "country": {
          "type": "uri",
          "value": "http://downlode.org/rdf/iso-3166/countries#US"
        },
        "nrOfReviews": {
          "datatype": "http://www.w3.org/2001/XMLSchema#integer",
          "type": "literal",
          "value": "10"
        },
        "product": {
          "type": "uri",
          "value": "http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromProducer9/Product451"
        }
      },
      {
        "avgPrice": {
          "datatype": "http://www.w3.org/2001/XMLSchema#float",
          "type": "literal",
          "value": "5028.4897"
        },
        "country": {
          "type": "uri",
          "value": "http://downlode.org/rdf/iso-3166/countries#CN"
        },
        "nrOfReviews": {
          "datatype": "http://www.w3.org/2001/XMLSchema#integer",
          "type": "literal",
          "value": "4"
        },
        "product": {
          "type": "uri",
          "value": "http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromProducer10/Product471"
        }
      },
      {
        "avgPrice": {
          "datatype": "http://www.w3.org/2001/XMLSchema#float",
          "type": "literal",
          "value": "5658.503"
        },
        "country": {
          "type": "uri",
          "value": "http://downlode.org/rdf/iso-3166/countries#FR"
        },
        "nrOfReviews": {
          "datatype": "http://www.w3.org/2001/XMLSchema#integer",
          "type": "literal",
          "value": "4"
        },
        "product": {
          "type": "uri",
          "value": "http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromProducer9/Product451"
        }
      },
      {
        "avgPrice": {
          "datatype": "http://www.w3.org/2001/XMLSchema#float",
          "type": "literal",
          "value": "4670.0396"
        },
        "country": {
          "type": "uri",
          "value": "http://downlode.org/rdf/iso-3166/countries#RU"
        },
        "nrOfReviews": {
          "datatype": "http://www.w3.org/2001/XMLSchema#integer",
          "type": "literal",
          "value": "4"
        },
        "product": {
          "type": "uri",
          "value": "http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromProducer12/Product546"
        }
      },
      {
        "avgPrice": {
          "datatype": "http://www.w3.org/2001/XMLSchema#float",
          "type": "literal",
          "value": "4670.0396"
        },
        "country": {
          "type": "uri",
          "value": "http://downlode.org/rdf/iso-3166/countries#AT"
        },
        "nrOfReviews": {
          "datatype": "http://www.w3.org/2001/XMLSchema#integer",
          "type": "literal",
          "value": "2"
        },
        "product": {
          "type": "uri",
          "value": "http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromProducer12/Product546"
        }
      },
      {
        "avgPrice": {
          "datatype": "http://www.w3.org/2001/XMLSchema#float",
          "type": "literal",
          "value": "5107.37"
        },
        "country": {
          "type": "uri",
          "value": "http://downlode.org/rdf/iso-3166/countries#DE"
        },
        "nrOfReviews": {
          "datatype": "http://www.w3.org/2001/XMLSchema#integer",
          "type": "literal",
          "value": "2"
        },
        "product": {
          "type": "uri",
          "value": "http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromProducer11/Product529"
        }
      },
      {
        "avgPrice": {
          "datatype": "http://www.w3.org/2001/XMLSchema#float",
          "type": "literal",
          "value": "5117.6626"
        },
        "country": {
          "type": "uri",
          "value": "http://downlode.org/rdf/iso-3166/countries#ES"
        },
        "nrOfReviews": {
          "datatype": "http://www.w3.org/2001/XMLSchema#integer",
          "type": "literal",
          "value": "2"
        },
        "product": {
          "type": "uri",
          "value": "http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromProducer9/Product443"
        }
      },
      {
        "avgPrice": {
          "datatype": "http://www.w3.org/2001/XMLSchema#float",
          "type": "literal",
          "value": "4828.3696"
        },
        "country": {
          "type": "uri",
          "value": "http://downlode.org/rdf/iso-3166/countries#GB"
        },
        "nrOfReviews": {
          "datatype": "http://www.w3.org/2001/XMLSchema#integer",
          "type": "literal",
          "value": "2"
        },
        "product": {
          "type": "uri",
          "value": "http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromProducer12/Product560"
        }
      },
      {
        "avgPrice": {
          "datatype": "http://www.w3.org/2001/XMLSchema#float",
          "type": "literal",
          "value": "4828.3696"
        },
        "country": {
          "type": "uri",
          "value": "http://downlode.org/rdf/iso-3166/countries#JP"
        },
        "nrOfReviews": {
          "datatype": "http://www.w3.org/2001/XMLSchema#integer",
          "type": "literal",
          "value": "2"
        },
        "product": {
          "type": "uri",
          "value": "http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromProducer12/Product560"
        }
      },
      {
        "avgPrice": {
          "datatype": "http://www.w3.org/2001/XMLSchema#float",
          "type": "literal",
          "value": "5028.4897"
        },
        "country": {
          "type": "uri",
          "value": "http://downlode.org/rdf/iso-3166/countries#KR"
        },
        "nrOfReviews": {
          "datatype": "http://www.w3.org/2001/XMLSchema#integer",
          "type": "literal",
          "value": "1"
        },
        "product": {
          "type": "uri",
          "value": "http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromProducer10/Product471"
        }
      },
      {
        "avgPrice": {
          "datatype": "http://www.w3.org/2001/XMLSchema#float",
          "type": "literal",
          "value": "5107.37"
        },
        "country": {
          "type": "uri",
          "value": "http://downlode.org/rdf/iso-3166/countries#KR"
        },
        "nrOfReviews": {
          "datatype": "http://www.w3.org/2001/XMLSchema#integer",
          "type": "literal",
          "value": "1"
        },
        "product": {
          "type": "uri",
          "value": "http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromProducer11/Product529"
        }
      }
    ]
  }
}
