bench/tests/query_results/snapshots/r#mod__query_results__bsbm__Explore Q1.snap
---
source: bench/tests/results/bsbm.rs
expression: "run_select_query(&store, include_str!(\"./queries/explore-q1.sparql\")).await"
---
{
  "head": {
    "vars": [
      "product",
      "label"
    ]
  },
  "results": {
    "bindings": [
      {
        "label": {
          "type": "literal",
          "value": "coughs"
        },
        "product": {
          "type": "uri",
          "value": "http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromProducer11/Product528"
        }
      },
      {
        "label": {
          "type": "literal",
          "value": "marooning"
        },
        "product": {
          "type": "uri",
          "value": "http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromProducer9/Product433"
        }
      }
    ]
  }
}
