bench/tests/query_results/snapshots/r#mod__query_results__bsbm__Explore Q3.snap
---
source: bench/tests/results/bsbm.rs
expression: "run_select_query(&store, include_str!(\"./queries/explore-q3.sparql\")).await"
---
{
  "head": {
    "vars": [
      "product",
      "label"
    ]
  },
  "results": {
    "bindings": [
      {
        "label": {
          "type": "literal",
          "value": "primas"
        },
        "product": {
          "type": "uri",
          "value": "http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromProducer12/Product568"
        }
      }
    ]
  }
}
