bench/tests/query_results/snapshots/r#mod__query_results__bsbm__Explore Q5.snap
---
source: bench/tests/results/bsbm.rs
expression: "run_explore_query(&store, include_str!(\"./queries/explore-q5.sparql\")).await"
---
{
  "head": {
    "vars": [
      "product",
      "productLabel"
    ]
  },
  "results": {
    "bindings": [
      {
        "product": {
          "type": "uri",
          "value": "http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromProducer10/Product461"
        },
        "productLabel": {
          "type": "literal",
          "value": "initiating"
        }
      },
      {
        "product": {
          "type": "uri",
          "value": "http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromProducer21/Product985"
        },
        "productLabel": {
          "type": "literal",
          "value": "tempered"
        }
      }
    ]
  }
}
