bench/tests/query_results/snapshots/r#mod__query_results__bsbm__Explore Q7.snap
---
source: bench/tests/results/bsbm.rs
expression: "run_explore_query(&store, include_str!(\"./queries/explore-q7.sparql\")).await"
---
{
  "head": {
    "vars": [
      "productLabel",
      "offer",
      "price",
      "vendor",
      "vendorTitle",
      "review",
      "revTitle",
      "reviewer",
      "revName",
      "rating1",
      "rating2"
    ]
  },
  "results": {
    "bindings": [
      {
        "productLabel": {
          "type": "literal",
          "value": "seems retentiveness repressiveness"
        },
        "rating1": {
          "datatype": "http://www.w3.org/2001/XMLSchema#integer",
          "type": "literal",
          "value": "4"
        },
        "rating2": {
          "datatype": "http://www.w3.org/2001/XMLSchema#integer",
          "type": "literal",
          "value": "3"
        },
        "revName": {
          "type": "literal",
          "value": "Anasooya"
        },
        "revTitle": {
          "type": "literal",
          "value": "encamps freestanding alcaldes rebids admonisher overproducing unhorses gastroscopic scrags caboodle sexiest etherized"
        },
        "review": {
          "type": "uri",
          "value": "http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromRatingSite1/Review628"
        },
        "reviewer": {
          "type": "uri",
          "value": "http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromRatingSite1/Reviewer32"
        }
      },
      {
        "productLabel": {
          "type": "literal",
          "value": "seems retentiveness repressiveness"
        },
        "rating1": {
          "datatype": "http://www.w3.org/2001/XMLSchema#integer",
          "type": "literal",
          "value": "5"
        },
        "rating2": {
          "datatype": "http://www.w3.org/2001/XMLSchema#integer",
          "type": "literal",
          "value": "4"
        },
        "revName": {
          "type": "literal",
          "value": "Guy-Yasuyuki"
        },
        "revTitle": {
          "type": "literal",
          "value": "sons illustrates prognose huskiest bouse"
        },
        "review": {
          "type": "uri",
          "value": "http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromRatingSite1/Review7349"
        },
        "reviewer": {
          "type": "uri",
          "value": "http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromRatingSite1/Reviewer361"
        }
      },
      {
        "productLabel": {
          "type": "literal",
          "value": "seems retentiveness repressiveness"
        },
        "rating1": {
          "datatype": "http://www.w3.org/2001/XMLSchema#integer",
          "type": "literal",
          "value": "2"
        },
        "rating2": {
          "datatype": "http://www.w3.org/2001/XMLSchema#integer",
          "type": "literal",
          "value": "10"
        },
        "revName": {
          "type": "literal",
          "value": "Kaori-Gratia"
        },
        "revTitle": {
          "type": "literal",
          "value": "intendeds doorstops chryslers glamorously pyrometers corruptibleness mounded"
        },
        "review": {
          "type": "uri",
          "value": "http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromRatingSite1/Review7761"
        },
        "reviewer": {
          "type": "uri",
          "value": "http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromRatingSite1/Reviewer383"
        }
      },
      {
        "productLabel": {
          "type": "literal",
          "value": "seems retentiveness repressiveness"
        },
        "rating1": {
          "datatype": "http://www.w3.org/2001/XMLSchema#integer",
          "type": "literal",
          "value": "5"
        },
        "rating2": {
          "datatype": "http://www.w3.org/2001/XMLSchema#integer",
          "type": "literal",
          "value": "1"
        },
        "revName": {
          "type": "literal",
          "value": "Nali-Amphiaraus"
        },
        "revTitle": {
          "type": "literal",
          "value": "discrowned rankish grandams hetaerae gassiness slagging lakiest deselect basswoods investiture neglecting"
        },
        "review": {
          "type": "uri",
          "value": "http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromRatingSite1/Review7913"
        },
        "reviewer": {
          "type": "uri",
          "value": "http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromRatingSite1/Reviewer391"
        }
      }
    ]
  }
}
